[project]
name = "puig"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.3",
    "ipykernel==6.29.0",
    "tqdm==4.66.1",
    "scikit-learn==1.4.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "torch==2.1.2",
    "mypy==1.8.0",
    "classopt==0.2.1",
    "pytest==7.4.4",
    "pyro-ppl==1.9.1",
    "japanize-matplotlib==1.1.3",
    "invoke==2.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
